--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 		<title>rKoshurKitchen - Home</title>
 		<link rel="stylesheet" href="./style.css" />
 		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-qm9AUaC8scJDGupkEJkR4+r2f4Y0Zm36AqJmfuGViTR+O4Pht4Q7F5ABxjMW7kT1"
+			crossorigin="anonymous"
+		/>
+		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
 		/>
@@ -103,7 +109,7 @@
 							<img
 								src="./assets/images/dishes/masc.jpg"
 								alt="Masc"
-								style="position: relative; top: -80px; left: -70px"
+								class="dish-masc"
 							/>
 						</div>
 						<h2>Masc (Meat Balls)</h2>
@@ -221,10 +227,20 @@
 					</div>
 					<div class="dish hidden-nonveg">
 						<div style="overflow: hidden; width: 400px; height: 500px">
-							<img
-								src="./assets/images/dishes/mutton-kanti.jpg"
-								alt="Mutton Kanti"
-							/>
+							<!-- <img src="" alt="Mutton Kanti" /> -->
+							<div style="color: #aa0000; width: 100%; height: 100%">
+								<p
+									style="
+										font-weight: bold;
+										position: relative;
+										left: 20%;
+										top: 50%;
+									"
+								>
+									Image not here just yet!
+									<i class="fa-solid fa-heart fa-2xl" id="heart"></i>
+								</p>
+							</div>
 						</div>
 						<h2>Mutton Kanti</h2>
 						<p>$75.00/Kilo.</p>
@@ -316,7 +332,7 @@
 							<img
 								src="./assets/images/dishes/paneer-rogan-josh.jpg"
 								alt="Paneer Rogan Josh"
-								style="position: relative; top: -110px; left: -70px"
+								class="dish-prj"
 							/>
 						</div>
 						<h2>Paneer Rogan Josh</h2>
@@ -355,7 +371,7 @@
 							<img
 								src="./assets/images/dishes/paneer-kalia.jpg"
 								alt="Paneer Kalia"
-								style="position: relative; left: -130px; top: -100px"
+								class="dish-pk"
 							/>
 						</div>
 						<h2>Paneer Kalia</h2>
@@ -394,7 +410,7 @@
 							<img
 								src="./assets/images/dishes/paneer-kanti.jpg"
 								alt="Paneer Kanti"
-								style="position: relative; top: -110px; left: -70px"
+								class="dish-pkt"
 							/>
 						</div>
 						<h2>Paneer Kanti</h2>
@@ -433,7 +449,7 @@
 							<img
 								src="./assets/images/dishes/nadur-yakhni.jpg"
 								alt="Nadur Yakhni"
-								style="position: relative; top: -50px; left: -85px"
+								class="dish-ny"
 							/>
 						</div>
 						<h2>Nadur Yakhni</h2>
@@ -472,7 +488,7 @@
 							<img
 								src="./assets/images/dishes/cauliflower-rogan-josh.jpg"
 								alt="Cauliflower Rogan Josh"
-								style="position: relative; top: -100px; left: -85px"
+								class="dish-cfrj"
 							/>
 						</div>
 						<h2>Cauliflower Rogan Josh</h2>
@@ -529,10 +545,11 @@
 									width: 400px;
 									height: 600px;
 								"
+								class="dish-sh"
 							/>
 						</div>
 						<h2>Shufta</h2>
-						<p>$35.00</p>
+						<p>$40.00/250g</p>
 						<p>
 							A mixture of various dry fruits, paneer sautéed in Ghee and spices
 							coated with sugar syrup.
@@ -540,8 +557,8 @@
 						<div class="weight-dropdown">
 							<select name="weight" title="Select weight" id="weight-sh">
 								<option value="" disabled selected>Select weight:</option>
-								<option value="500g">500g</option>
-								<option value="1kg">1kg</option>
+								<option value="250g">250g - $40.00</option>
+								<option value="500g">500g - $70.00</option>
 							</select>
 						</div>
 						<div class="quantity">
@@ -752,6 +769,11 @@
 				<p class="watermark">Site developed with ❤️.</p>
 			</footer>
 		</center>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-kQtW33rZJAHjge9c4gA1J4gSKaEnFA7pkYgz0Acj5XlW/c3Z7oOBs6kbnVbY8GJg"
+			crossorigin="anonymous"
+		></script>
 		<script src="./script.js"></script>
 	</body>
 </html>
