--- a/index.html
+++ b/index.html
@@ -3,14 +3,32 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="title" content="rKoshurKitchen - Home" />
+		<meta
+			name="description"
+			content="Experience the authentic taste of  Kashmiri cuisine."
+		/>
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://rkoshurkitchen.com/" />
+		<meta property="og:title" content="rKoshurKitchen - Home" />
+		<meta
+			property="og:description"
+			content="Experience the authentic taste of Kashmiri cuisine."
+		/>
+		<meta property="og:image" content="./assets/images/background.jpg" />
+
+		<!-- X (Twitter) -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://rkoshurkitchen.com/" />
+		<meta property="twitter:title" content="rKoshurKitchen - Home" />
+		<meta
+			property="twitter:description"
+			content="Experience the authentic taste of Kashmiri cuisine."
+		/>
+		<meta property="twitter:image" content="./assets/images/background.jpg" />
 		<title>rKoshurKitchen - Home</title>
 		<link rel="stylesheet" href="./style.css" />
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-qm9AUaC8scJDGupkEJkR4+r2f4Y0Zm36AqJmfuGViTR+O4Pht4Q7F5ABxjMW7kT1"
-			crossorigin="anonymous"
-		/>
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -65,11 +83,7 @@
 							<img
 								src="./assets/images/dishes/mutton-rogan-josh.jpg"
 								alt="Mutton Rogan Josh"
-								style="
-									position: relative;
-									top: -100px;
-									left: -100px;
-								"
+								style="position: relative; top: -100px; left: -100px"
 							/>
 						</div>
 						<h2>Mutton Rogan Josh</h2>
@@ -767,11 +781,6 @@
 				<p class="watermark">Site developed with ❤️.</p>
 			</footer>
 		</center>
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-kQtW33rZJAHjge9c4gA1J4gSKaEnFA7pkYgz0Acj5XlW/c3Z7oOBs6kbnVbY8GJg"
-			crossorigin="anonymous"
-		></script>
 		<script src="./script.js"></script>
 	</body>
 </html>
