--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
 		</div>
 		<div class="about">
 			<div class="about-content">
-				<img src="./assets/images/rohini.jpg" alt="Rohini Bhan Challu" />
+				<img
+					src="./assets/images/rohini.jpg"
+					alt="Rohini Bhan Challu"
+					style="--webkit-user-drag: none; pointer-events: none"
+				/>
 				<div class="about-text-div">
 					<p>
 						RohiniBhan Challu, a Graphic Designer by profession, always had a
